--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -7,4 +7,18 @@
     <color name="teal_700">#FF018786</color>
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
+    <color name="gray">#808080</color>
+    <color name="color_534713">#534713</color>
+    <color name="color_ffd100">#ffd100</color>
+    <color name="color_297EFF">#297EFF</color>
+    <color name="color_FB3B3B">#FB3B3B</color>
+    <color name="color_2ED33E">#2ED33E</color>
+    <color name="color_FBA53B">#FBA53B</color>
+    <color name="color_80FFD100">#80FFD100</color>
+    <color name="color_e8e8e8">#e8e8e8</color>
+    <color name="color_979797">#979797</color>
+    <color name="color_cccccc">#cccccc</color>
+    <color name="color_f4f4f4">#f4f4f4</color>
+    <color name="color_777777">#777777</color>
+    <color name="color_00FFFFFF">#00FFFFFF</color>
 </resources>
