1. 가장 많이 당첨된 번호 6개 출력 2. 가장 많이 1등 당첨된 번호 나열 > 하나도 겹침이 없어서 의미X

--- a/app/src/main/res/layout/fragment_best_number.xml
+++ b/app/src/main/res/layout/fragment_best_number.xml
@@ -4,33 +4,23 @@
     <data>
 
         <variable
-            name="home"
-            type="com.yun.mysimplelotto.ui.home.HomeViewModel" />
+            name="best"
+            type="com.yun.mysimplelotto.ui.best.BestNumberViewModel" />
     </data>
 
     <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
         android:layout_width="match_parent"
         android:layout_height="match_parent">
 
-        <Button
-            android:id="@+id/btn_search"
+        <TextView
+            android:id="@+id/tv_best"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="지난 회차 검색하기"
+            android:text="@{`가장 많이 나온 숫자는\n`+best.bestNumber}"
+            app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent" />
-
-        <Button
-            android:id="@+id/btn_best"
-            android:layout_width="wrap_content"
-            android:layout_marginTop="20dp"
-            android:layout_height="wrap_content"
-            android:text="가장 많이 나온 숫자 확인하기"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/btn_search"/>
-
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 
